tests/neg-macros/i15917.scala
import scala.quoted.*

def m(using Quotes): Expr[Option[?]] =
  val s = 3
  type st = s.type
  '{ Some(${ Expr(s) }: st) } // error
